# openai-hackathon

./: .gitignore  generate_plot.py  pyproject.toml  requirements.txt  run_streaming.py  streaming_cli.py  test_synth_speech.py
be/: create_presentation.py  generate_slide.py  pyproject.toml  run_api.py  run_teacher.py  test_synth_speech.py
be/teacher_communitcation/: text_communication.py
realtime_streaming/: pyproject.toml
realtime_streaming/client/: __init__.py  realtime_client.py
realtime_streaming/handlers/: __init__.py
teacher_communitcation/: routes.py  teacher.py  voice_communication.py
ui/: README.md  index.html
ui/public/0/: slide_0.txt
ui/public/1/: slide_1.txt
ui/public/2/: slide_2.txt
ui/public/3/: slide_3.txt
ui/public/4/: slide_4.txt
ui/public/5/: slide_5.txt
ui/public/6/: slide_6.txt
ui/public/7/: slide_7.txt
ui/public/8/: slide_8.txt
ui/src/components/: ChatInput.tsx  ChatInterface.tsx  Message.tsx  VideoWindow.tsx
ui/src/pages/: Index.tsx
ui/src/types/: types.ts
ui/src/utils/: chatUtils.ts
